--- a/tinhchieudaicungtron.html
+++ b/tinhchieudaicungtron.html
@@ -83,12 +83,12 @@
 <body>
 
 <div class="container">
-<h3>Tính chiều dài cung tròn L</h3>
+<h3>Tính chiều dài cung tròn l</h3>
 
-<label>Nhập d:</label>
+<label>Nhập giá trị d =</label>
 <input type="number" id="d" value="2718">
 
-<label>Nhập h:</label>
+<label>Nhập giá trị h =</label>
 <input type="number" id="h" value="279">
 
 <button onclick="tinhCung()">Tính chiều dài cung</button>
