--- a/tinhchieudaicungtron.html
+++ b/tinhchieudaicungtron.html
@@ -83,7 +83,7 @@
 <body>
 
 <div class="container">
-<h3>Tính chiều dài cung tròn l</h3>
+<h3>Tính chiều dài cung tròn</h3>
 
 <label>Nhập giá trị d =</label>
 <input type="number" id="d" value="2718">
@@ -111,7 +111,7 @@ function tinhCung() {
     let L = R * theta;
 
     document.getElementById("ketqua").innerHTML =
-        "Chiều dài cung L = <b>" + L.toFixed(4) + " cm</b>";
+        "Kết quả L = <b>" + L.toFixed(4) + " cm</b>";
 }
 </script>
 
